   * [move_unit_fake] now accepts an optional force_scroll= attribute (def. to
     'yes') that allows scrolling the viewport even when [lock_view] is in
     effect or Follow Unit Actions is disabled in Advanced Preferences.
   * [move_unit] accepts an optional force_scroll= attribute like
     [move_unit_fake] above, defaults to using the [move_unit_fake] default.

Version 1.11.5:
 * Add-ons client:
   * Do not bump the download count for add-ons that are currently installed
     and are being reinstalled or upgraded
 * Add-ons server:
   * Restricted names (not titles) for newly uploaded add-ons to ASCII hyphens,
     underlines, and alphanumerical characters. Previously uploaded add-ons
     are exempt from this change.
 * AI:
   * New macro EXPERIMENTAL_AI for using Experimental AI in both SP scenarios and MP maps
   * Recruiting in Micro and Experimental AIs: allow more terrain codes for castles/keeps 
   * Improved/Added: Command 'lua wesnoth.debug_ai([side]).ai' will now give access to the
     ai-table of [side].
   * Improved AI behavior when using goto_x / goto_y in WML
   * Micro AIs:
     * Zone Guardian: Add optional station_x,station_y= keys
     * Goto: don't exclude leader by default
     * Bug fixes in Return Guardian, Healer Support and Goto MAIs
   * Experimental AI: fix bugs that disabled recruiting for some UMC weapon specials
 * Campaigns:
   * All:
     * replaced deprecated aspects with [goal] aspect
   * Heir to the Throne:
     * Updated Li'sar's movetype and resistances to match her armor.
   * Legend of Wesmere:
     * Scenario 05: Elvish Horse Archers can now carry the treasure
     * Scenario 09: the player's loyal units stay in the recall list, instead of
       being stored and then unstored in scenario 14
   * Under the Burning Suns:
     * Scenario 8 (Out of the Frying Pan): Fix messenger AI (Lua errors and wrong goal)
 * Engine:
   * Made game config loading more modular by extracting appropriate