@@ -23,6 +23,7 @@ Version 1.11.5+dev:
      effect or Follow Unit Actions is disabled in Advanced Preferences.
    * [move_unit] accepts an optional force_scroll= attribute like
      [move_unit_fake] above, defaults to using the [move_unit_fake] default.
+   * Added: Feature in pathfind.xpp to build a cost map.
 
 Version 1.11.5:
  * Add-ons client:
